[gd_scene load_steps=2 format=3 uid="uid://buiht24ddp5bo"]

[ext_resource type="Script" uid="uid://cu1mliqrvpo0n" path="res://scripts/ui/screens/GovernorsDesk/npc_template.gd" id="1_hro3u"]

[node name="GovernorsScreenNPCTemplate" type="Panel"]
custom_minimum_size = Vector2(390, 400)
offset_right = 390.0
offset_bottom = 400.0
script = ExtResource("1_hro3u")
metadata/_custom_type_script = "uid://cu1mliqrvpo0n"

[node name="SelectedPanel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(390, 400)
layout_mode = 0
offset_right = 390.0
offset_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(390, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -200.0
offset_right = 195.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
alignment = 1

[node name="NPCName" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "NPC Name"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Age" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "NPC Age"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Skill" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "SkillName: SkillLevelName
SkillName: SkillLevelName
SkillName: SkillLevelName
SkillName: SkillLevelName
SkillName: SkillLevelName"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -195.0
offset_top = -31.0
offset_right = 195.0
grow_horizontal = 2
grow_vertical = 0
text = "Select"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
